# Stock-tool

./: Developer Certificate of Origin  How to install  License  README.md  SECURITY.md
Stock/: auth.py  database.py  main.py  pyproject.toml  stock_utils.py  stocksentinel.db  styles.css
Stock/attached_assets/StockSentinel/: README.md  main.py  pyproject.toml
Stock/attached_assets/StockSentinel/database/: crud.py  models.py
Stock/attached_assets/StockSentinel/examples/: notification_example.py  sms_example.py
Stock/attached_assets/StockSentinel/migrations/: env.py
Stock/attached_assets/StockSentinel/migrations/versions/: 6ec0d4c14eae_initial_migration.py
Stock/attached_assets/StockSentinel/styles/: custom.css
Stock/attached_assets/StockSentinel/utils/: chart_utils.py  notifications.py  sms_notifications.py  stock_data.py
